navbar is stretching correctly, just not sticking to the top of the screen for some reason.

--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -1,15 +1,16 @@
+.navbar-outer{
+    width: 100%;
+    background-color: rgb(227, 192, 255);
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    position: sticky;
+    top: 0;
+    z-index: 1000;
+}
 .navbar {
     display: flex;
     justify-content: space-between; 
     align-items: center;
-    background-color: rgb(227, 192, 255);
-    color: white;
     padding: 5px;
-    position: sticky;
-    top: 0;
-    z-index: 1000;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-    margin-bottom: 1rem; 
     max-width: 1280px;
     margin: auto;
 }
@@ -64,7 +65,7 @@
     width: 100%; 
     max-width: 600px;
     padding: 5px 10px; 
-    border: 1px solid #ccc;
+    border: 1px solid #cccccc;
     border-radius: 4px;
     
 }
